<resources>
    <string name="app_name">ExpCal</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="new_expense">New Expense</string>
    <string name="report">Expenditure</string>
    <string name="to">To</string>
    <string name="calender">Calender</string>
    <string name="avg">Average</string>
    <string-array name="items">
        <item>Food</item>
        <item>Drinks</item>
        <item>Other</item>
    </string-array>
</resources>
