<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:text="@string/new_expense"
        android:id="@+id/expenseText"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        />

    <Spinner
        android:layout_width="200sp"
        android:layout_height="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseText"
        android:layout_marginTop="10sp"
        android:id="@+id/type"
        android:entries="@array/items"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        />

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/type"
        app:layout_constraintTop_toTopOf="@id/type"
        app:layout_constraintBottom_toBottomOf="@id/type"
        android:gravity="center"
        android:id="@+id/clock"
        android:layout_marginStart="20sp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/to"
        app:layout_constraintRight_toLeftOf="@id/amountEditText"
        android:layout_marginStart="10sp"
        android:id="@+id/amount"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="180sp"
        android:layout_height="40sp"
        app:layout_constraintTop_toTopOf="@id/amount"
        app:layout_constraintLeft_toRightOf="@id/amount"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10sp"
        android:inputType="numberDecimal"
        android:background="@drawable/card_path"
        android:hint="100"
        android:gravity="center"
        android:id="@+id/amountEditText"
        android:shadowColor="@color/grey"
        android:shadowRadius="10"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_button"
        app:layout_constraintRight_toLeftOf="@id/amountEditText"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:id="@+id/to"
        />
    <EditText
        android:layout_width="180sp"
        android:layout_height="40sp"
        app:layout_constraintTop_toTopOf="@id/to"
        app:layout_constraintLeft_toLeftOf="@id/amountEditText"
        app:layout_constraintBottom_toBottomOf="@id/to"
        android:inputType="text"
        android:background="@drawable/card_path"
        android:layout_marginTop="5sp"
        android:hint="Alex"
        android:gravity="center"
        android:id="@+id/toEditText"
        android:shadowColor="@color/grey"
        android:shadowRadius="5"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_button"
        android:text="@string/add"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/toEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        android:layout_margin="10sp"
        android:textColor="@color/white"
        />

</android.support.constraint.ConstraintLayout>