<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15sp"
    android:elevation="7sp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expenseTypeCardView"
            android:textSize="30sp"
            android:layout_marginStart="10sp"
            android:textStyle="bold"
            android:elevation="7sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="5sp"
            android:id="@+id/typeImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/amount"
            app:layout_constraintLeft_toRightOf="@id/expenseTypeCardView"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:id="@+id/amountCardView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amountTextCardView"
            app:layout_constraintLeft_toRightOf="@id/amountCardView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/amountCardView"
            app:layout_constraintBottom_toBottomOf="@id/amountCardView"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/amountCardView"
            app:layout_constraintTop_toTopOf="@id/timetextCardView"
            app:layout_constraintBottom_toBottomOf="@id/timetextCardView"
            app:layout_constraintRight_toRightOf="@id/amountCardView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/time"
            android:id="@+id/timeCardView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/amountTextCardView"
            app:layout_constraintTop_toBottomOf="@id/amountCardView"
            android:textSize="20sp"
            android:layout_marginTop="5sp"
            android:textStyle="bold"
            android:id="@+id/timetextCardView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/amountCardView"
            app:layout_constraintTop_toBottomOf="@id/timeCardView"
            app:layout_constraintRight_toRightOf="@id/amountCardView"
            android:textSize="20sp"
            android:id="@+id/to"
            android:layout_marginTop="5sp"
            android:textStyle="bold"
            android:text="@string/to"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/amountTextCardView"
            app:layout_constraintTop_toTopOf="@id/to"
            app:layout_constraintBottom_toBottomOf="@id/to"
            android:id="@+id/toTextCardView"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>